# PaperCraft

./: .dockerignore  .editorconfig  .env.example  .gitignore  AI_Papercraft_Platform_Architecture.md  AI_Papercraft_Platform_PRD_final.docx  README.md  package.json  pnpm-lock.yaml
apps/: README.md
apps/web/: Dockerfile  README.md  package.json
docs/: README.md
docs/architecture/: README.md
docs/contracts/: core-platform-contracts.md  (+1 more)
infra/: README.md
services/: README.md
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/app/: __init__.py  config.py  main.py
services/api/app/api/: deps.py  errors.py  router.py
services/api/app/api/routes/: artifacts.py  metrics.py  projects.py  tasks.py
services/api/app/db/: __init__.py  models.py  session.py
services/api/app/domain/: __init__.py  enums.py  task_state.py
services/api/app/schemas/: errors.py  projects.py  tasks.py
services/api/app/services/: __init__.py  exporting.py  mesh_generation.py  mock_artifacts.py  object_storage.py  observability.py  paperability.py  preprocessing.py  storage_paths.py  task_dispatch.py  unfolding.py
services/api/app/worker/: __init__.py  celery_app.py  orchestrator.py  tasks.py
services/api/migrations/: env.py
services/api/migrations/versions/: 20260505_0001_core_schema.py
services/api/tests/: test_api_artifacts.py  test_api_projects.py  test_exporting.py  test_mesh_generation.py  test_paperability.py  test_preprocessing.py  test_qa_assets.py  test_storage_paths.py  test_task_state.py  test_unfolding.py  test_worker_orchestrator.py
(+19 files in other folders)
