[project]
name = "papercraft-api"
version = "0.1.0"
description = "FastAPI service for AI PaperCraft Studio"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "pillow>=11.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "python-multipart>=0.0.12",
  "psycopg[binary]>=3.2.3",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.32.0",
  "minio>=7.2.20",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
